# gasflux

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-requirements.txt  flux.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  blank.yml  build-release.yml  deploy.yml  release.yml
gasflux/: __init__.py  gas.py  ml.py  pipelines.py  plotting.py  pre_processing.py  processing.py
gasflux/resources/: model.pkl
ghgflux/: __init__.py  baseline.py  interpolation.py  pipelines.py  plotting.py  pre_processing.py  processing.py  reporting.py
paper/: paper.bib  paper.md
scripts/: mono_flight_splitter.py
src/: __init__.py  baseline.py  ml.py  pipelines.py  pre_processing.py  processing.py
src/gasflux/: __init__.py  background.py  baseline.py  cli.py  config.yaml  gas.py  gasflux_config.yaml  generate_test_data.py  interpolation.py  ml.py  pipelines.py  plotting.py  pre_processing.py  processing.py  processing_pipelines.py  reporting.py
src/gasflux/templates/: mass_balance_template.html
src/gasflux/testdata/: exampledata.csv  testconfig.yaml  testdata.csv
templates/: mass_balance_template.html
tests/: generate_test_data.py  test_processing.py  test_processing_pipelines.py  testconfig.yaml
tests/data/: exampledata.csv  test_data.csv  testdata.csv
tools/: generate_test_data.py  mono_flight_splitter.py  test_data_config.yaml
